# cc-launcher

./: .gitignore  LICENSE  README.md  package.json
.github/workflows/: release.yml
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: claude_meta.rs  commands.rs  config.rs  launcher.rs  lib.rs  main.rs  scanner.rs
