[package]
name = "cc-launcher"
version = "0.1.0"
edition = "2021"

[lib]
name = "cc_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
dirs = "6"
chrono = { version = "0.4", features = ["serde"] }
window-vibrancy = "0.5"
